@startuml
!theme plain
skinparam backgroundColor transparent
skinparam shadowing false
skinparam roundcorner 8
skinparam defaultFontName "Helvetica"
skinparam classAttributeIconSize 0
skinparam ArrowColor #33475b
skinparam class {
  BackgroundColor #FBFCFE
  BorderColor #33475b
  ArrowColor #33475b
}

class User {
  +id : UUID
}

enum DeviceType {
  Ios
  Android
  Computer
}

class Notification {
  +id : UUID
  +image : String
  -sendBy : UUID «nullable»
}
class NotificationContent {
  +id : UUID
  +title : String
  +body : String
  +url : String
  +language : Language
}
class UserNotification {
  +id : UUID
  +isSeen : Boolean
}
class NotificationToken {
  +id : UUID
  +token : String <<unique>>
  +device : String
  +deviceType : DeviceType
}
class UserNotificationSettings {
  +userId : UUID <<unique>>
  +emailNotificationsEnabled : Boolean = true
  +pushNotificationsEnabled : Boolean = true
  +telegramNotificationsEnabled : Boolean = false
  +ntfyNotificationsEnabled : Boolean = false
}
class UserTelegramBot {
  +userId : UUID <<unique>>
  +chatId : String
}
class UserNtfyIntegration {
  +userId : UUID <<unique>>
  +topic : String
  +token : String
}

User "1" --> "0..*" Notification : "sends (sendBy?)"
User "1" --> "0..*" UserNotification : receives
User "1" --> "0..*" NotificationToken : devices
User "1" --> "1" UserNotificationSettings : has
User "1" --> "1" UserTelegramBot : has
User "1" --> "1" UserNtfyIntegration : has
Notification "1" --> "1..*" NotificationContent : "content (i18n)"
Notification "1" --> "0..*" UserNotification : "fan-out (unique per user)"

NotificationToken ..> DeviceType
@enduml
